# course-site

./: README.md  setup.cfg
source/: conf.py  index.rst  requirements.txt
source/course-info/: License-terms.rst  course-environment-components.rst  course-info.rst  installing-miniconda.rst  slack-usage.rst
source/exercises/: Assignment1_Student_GitHubClassroom.ipynb  exercise-1.rst  exercise-2.rst
source/lessons/L1/: Introduction_to_GeoAI.rst  intro-to-GeoAI.rst  practical_1.rst
source/lessons/L10/: intro-to-GeoAI.rst
source/lessons/L2/: L2-Machine-Learning-Basics-part1.rst  L2-Machine-Learning-Basics-part2.rst  Machine-Learning-Basics.rst
source/lessons/L3/: L3-Deep-Learning.rst
source/lessons/L4/: L4-GeoAI-Image_Processing.rst
source/lessons/L5/: L5-Advanced_aspects_of_GeoAI.rst
source/lessons/L6/: L6-LLMs_and_Foundation_Models.rst
source/lessons/L7/: L7-GeoAI_Applications_and_Research.rst
source/tutorials/: 02a_geoai.ipynb  02b_geoai-solutions.ipynb  HandsOnGeoAI_Tutorial_1_Classification.ipynb  HandsOnGeoAI_Tutorial_2_Regression.ipynb  L2-BasicML-Tutorial-1-Classification.ipynb  L2-BasicML-Tutorial-2-Regression.ipynb  L2_T1_Notebook1_Vienna_Airbnb_Classification.ipynb  L3-Deep-Learning-Tutorial.ipynb  L4_1-EUROSAT.ipynb  Python_and_Jupyter_Notebook.ipynb  Tutorial_Classification_StepByStep.ipynb  Tutorial_Regression_StepByStep.ipynb  git-basics.rst
