[metadata]
name = Hands-on GeoAI
version = 2026
license = MIT
description = Hands-on Geospatial Artificial Intelligence
author = TU Graz & Aalto University
url = https://github.com/Hands-on-GeoAI/course-site
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = Hands-on-GeoAI
github_repo = course-site